--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <script>
       function helloName(params) {
         // wajib nama panggilan
-        if (params == 'Dewa') {
+        if (params == 'dewa') {
           return `Hello ${params}`;
         } else {
-          return `Anda bukan namapanggilan`;
+          return `Anda bukan dewa`;
         }
         // jika di dalam function pnya kondisi yang bercabang, berpengaruh pada output
       }
 
-      console.log(helloName('Dewa'));
+      console.log(helloName('dewa'));
     </script>
   </body>
 </html>
