--- a/tugas7.html
+++ b/tugas7.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ari Oka</title>
+    <link rel="stylesheet" href="style7.css" />
   </head>
   <body>
     <h1>Nama : I Dewa Gede Ari Oka</h1>
-    <p>Dewa Ari Oka</p>
+    <p>Dewa Ari Oka 123</p>
+    <br />
+    <hr />
+
+    <a class="button" href="tugas-08.html">Menuju Tugas 8</a>
+
     <script>
       function helloName(params) {
         // wajib nama panggilan
